Bugfix: no removal of non-existing column

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-11"
+    "Last modified: 2025-08-12"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "nodes_nodata = nodes.drop(\n",
-    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    "    columns=[\"name\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_nodata.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "if debug:\n",
@@ -518,7 +518,7 @@
    "outputs": [],
    "source": [
     "nodes_loopnum1 = nodes.drop(\n",
-    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    "    columns=[\"name\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_loopnum1.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "nodes_loopnum1[\"loopnum1\"] = get_vertex_loopnums(\n",
@@ -580,7 +580,7 @@
    "outputs": [],
    "source": [
     "nodes_loopnum2 = nodes.drop(\n",
-    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    "    columns=[\"name\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_loopnum2.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "nodes_loopnum2[\"loopnum2\"] = get_vertex_loopnums(\n",
@@ -623,7 +623,7 @@
    "outputs": [],
    "source": [
     "nodes_loopnum3 = nodes.drop(\n",
-    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    "    columns=[\"name\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_loopnum3.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "nodes_loopnum3[\"loopnum3\"] = get_vertex_loopnums(\n",
@@ -666,7 +666,7 @@
    "outputs": [],
    "source": [
     "nodes_loopnum4 = nodes.drop(\n",
-    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    "    columns=[\"name\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_loopnum4.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "nodes_loopnum4[\"loopnum4\"] = get_vertex_loopnums(\n",
