Set up experiments and sample nodes

--- a/code/06_poi_experiments.ipynb
+++ b/code/06_poi_experiments.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-11  \n",
-    "Last modified: 2025-08-12"
+    "Last modified: 2025-08-13"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "4. Add POIs to nodes in H3 grid cells with highest node density (q0.15)\n",
     "5. Add POIs to nodes in H3 grid cells with lowest water densities (q0.5), and of those lowest loops (q0.5), and of those highest node density (q0.5).\n",
     "\n",
-    "All setups limited to the same number of cells.\n",
+    "All setups limited to the same number of cells (but different number of nodes).\n",
     "\n",
     "Performance metrics: \n",
     "1. Increase the percent of zero-loop nodes (improvement from 29%)\n",
@@ -109,11 +109,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e02cda8b-9a95-410b-add3-3a431a516946",
+   "id": "65412754-5d90-4389-940f-1b45d77e3b12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "addpoisnum = [100]  # How many POIs to add in the experiments"
+    "experiment_setups = {\n",
+    "    \"random\": {},\n",
+    "    \"wpq15\": {},\n",
+    "    \"lbq15\": {},\n",
+    "    \"ndq15\": {},\n",
+    "    \"wplbndq50\": {},\n",
+    "}\n",
+    "experiment_results = {\n",
+    "    \"random\": {},\n",
+    "    \"wpq15\": {},\n",
+    "    \"lbq15\": {},\n",
+    "    \"ndq15\": {},\n",
+    "    \"wplbndq50\": {},\n",
+    "}\n",
+    "addpoisnums = [100]  # Number of POIs to add in each experiment\n",
+    "runsperexperiment = 10  # Number of runs per experiment"
    ]
   },
   {
@@ -139,7 +154,7 @@
    "id": "31f469da-22c9-4db2-981d-08c89270ecd3",
    "metadata": {},
    "source": [
-    "## Set up baseline data and targeted cells"
+    "## Set up baseline data and targeted cells/nodes for experiments"
    ]
   },
   {
@@ -377,9 +392,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = gdfjoined[\"Node density\"].quantile([0.85])  # Top 15% node density\n",
-    "q_nd15 = gdfjoined[gdfjoined[\"Node density\"].ge(q[0.85])]\n",
-    "\n",
     "q = gdfjoined[\"Water provision\"].quantile([0.15, 0.5])  # Bottom 15% water provision\n",
     "q_wp15 = gdfjoined[gdfjoined[\"Water provision\"].le(q[0.15])]\n",
     "q_wp50 = gdfjoined[gdfjoined[\"Water provision\"].le(q[0.5])]\n",
@@ -387,17 +399,20 @@
     "q = gdfjoined[\"Loop bits\"].quantile([0.15])  # Bottom 15% loop bits\n",
     "q_lb15 = gdfjoined[gdfjoined[\"Loop bits\"].le(q[0.15])]\n",
     "\n",
+    "q = gdfjoined[\"Node density\"].quantile([0.85])  # Top 15% node density\n",
+    "q_nd15 = gdfjoined[gdfjoined[\"Node density\"].ge(q[0.85])]\n",
+    "\n",
     "q = q_wp50[\"Loop bits\"].quantile([0.5])  # Bottom 50% loop bits\n",
     "q_wplb50 = q_wp50[q_wp50[\"Water provision\"].le(q[0.5])]\n",
     "q = q_wplb50[\"Node density\"].quantile([0.5])  # Top 50% node density\n",
     "q_wplbnd50 = q_wplb50[q_wplb50[\"Node density\"].ge(q[0.5])]\n",
     "\n",
     "# Clip to same lengths, by smallest water provisions\n",
-    "cliplen = min(len(q_nd15), len(q_wp15), len(q_lb15), len(q_wplbnd50))\n",
-    "q_nd15 = q_nd15.nsmallest(n=cliplen, columns=[\"Water provision\"])\n",
-    "q_wp15 = q_wp15.nsmallest(n=cliplen, columns=[\"Water provision\"])\n",
-    "q_lb15 = q_lb15.nsmallest(n=cliplen, columns=[\"Water provision\"])\n",
-    "q_wplbnd50 = q_wplbnd50.nsmallest(n=cliplen, columns=[\"Water provision\"])"
+    "numcells = min(len(q_nd15), len(q_wp15), len(q_lb15), len(q_wplbnd50))\n",
+    "q_nd15 = q_nd15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
+    "q_wp15 = q_wp15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
+    "q_lb15 = q_lb15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
+    "q_wplbnd50 = q_wplbnd50.nsmallest(n=numcells, columns=[\"Water provision\"])"
    ]
   },
   {
@@ -412,15 +427,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b82e36f-4ec6-4ccd-a511-9ae71b0edb01",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(20, 4))\n",
-    "\n",
-    "q_nd15.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[0])\n",
-    "axes[0].set_title(\"Loop bits+1, node density q15\")\n",
-    "axes[0].set_ylim([54.5, 57.8])\n",
-    "axes[0].set_xlim([8, 12.8])\n",
     "\n",
     "q_wp15.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[1])\n",
     "axes[1].set_title(\"Loop bits+1, water provision q15\")\n",
@@ -432,6 +444,11 @@
     "axes[2].set_ylim([54.5, 57.8])\n",
     "axes[2].set_xlim([8, 12.8])\n",
     "\n",
+    "q_nd15.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[0])\n",
+    "axes[0].set_title(\"Loop bits+1, node density q15\")\n",
+    "axes[0].set_ylim([54.5, 57.8])\n",
+    "axes[0].set_xlim([8, 12.8])\n",
+    "\n",
     "q_wplbnd50.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[3])\n",
     "axes[3].set_title(\"Loop bits+1, wplbnd q50\")\n",
     "axes[3].set_ylim([54.5, 57.8])\n",
@@ -439,11 +456,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bf2ed39-72bb-40a7-ac91-f59f9a7d85f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_setups[\"random\"][\"cellpopulation\"] = nodesh3\n",
+    "experiment_setups[\"wpq15\"][\"cellpopulation\"] = q_wp15\n",
+    "experiment_setups[\"lbq15\"][\"cellpopulation\"] = q_lb15\n",
+    "experiment_setups[\"ndq15\"][\"cellpopulation\"] = q_nd15\n",
+    "experiment_setups[\"wplbndq50\"][\"cellpopulation\"] = q_wplbnd50\n",
+    "\n",
+    "for k in (\n",
+    "    experiment_setups.keys()\n",
+    "):  # Determine node population: Select all nodes within cellpopulation\n",
+    "    experiment_setups[k][\"nodepopulation\"] = nodes_nodata.within(\n",
+    "        experiment_setups[k][\"cellpopulation\"].geometry.unary_union\n",
+    "    )\n",
+    "\n",
+    "if debug:\n",
+    "    for k in (\n",
+    "        experiment_setups.keys()\n",
+    "    ):  # True values show how many nodes are in each node population\n",
+    "        print(k)\n",
+    "        print(experiment_setups[k][\"nodepopulation\"].value_counts())\n",
+    "        print(\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "9b898889-32e0-4eb9-b39b-da385b8f4868",
+   "id": "96c245a5-a1f8-49a3-ab23-96dadba3bf06",
    "metadata": {},
    "source": [
-    "### Add POIs, snap POIs, generate loops"
+    "## Sample nodes for experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c00d6ead-2e5e-42d3-b998-e2e998415c6e",
+   "metadata": {},
+   "source": [
+    "Sampling:\n",
+    "- Assume number of POIs to add is not larger than the number of nodes available in the targeted cells\n",
+    "- Sample nodes randomly from the targeted grid cells (without replacement)"
    ]
   },
   {
@@ -452,14 +508,45 @@
    "id": "48c5721b-f66d-4493-ade5-6e2366b4544d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c = 0\n",
+    "for experimentid in experiment_results.keys():\n",
+    "    nodepop = experiment_setups[experimentid][\"nodepopulation\"].loc[\n",
+    "        experiment_setups[experimentid][\"nodepopulation\"] == True\n",
+    "    ]\n",
+    "    for poistoadd in addpoisnums:\n",
+    "        experiment_results[experimentid][poistoadd] = {\n",
+    "            \"nodesamples\": []\n",
+    "        }  # This is a list of lists of the nodes that are sampled in each run\n",
+    "        if poistoadd < numcells:\n",
+    "            for run in range(runsperexperiment):\n",
+    "                experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
+    "                    list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
+    "                )\n",
+    "                c += 1\n",
+    "print(\n",
+    "    \"Sampled \"\n",
+    "    + str(c)\n",
+    "    + \" node populations for \"\n",
+    "    + str(len(experiment_results.keys()))\n",
+    "    + \" experiments.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "723f08b5-5fb3-4607-9436-baaa488157d1",
+   "metadata": {},
+   "source": [
+    "## Run experiments: Add POIs, snap POIs, generate loops"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ebc7da83-4125-4c3e-8a97-27b2113d110a",
    "metadata": {},
    "source": [
-    "### Analysis"
+    "## Analyze experiment results"
    ]
   }
  ],
