--- a/code/06_poi_experiments.ipynb
+++ b/code/06_poi_experiments.ipynb
@@ -517,13 +517,12 @@
     "    for poistoadd in addpoisnums:\n",
     "        experiment_results[experimentid][poistoadd] = {\n",
     "            \"nodesamples\": []\n",
-    "        }  # This is a list of lists of the nodes that are sampled in each run\n",
-    "        if poistoadd < numcells:\n",
-    "            for run in range(runsperexperiment):\n",
-    "                experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
-    "                    list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
-    "                )\n",
-    "                c += 1\n",
+    "        }  # This is a list of lists of the node indices that are sampled in each run\n",
+    "        for run in range(runsperexperiment):\n",
+    "            experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
+    "                list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
+    "            )\n",
+    "            c += 1\n",
     "print(\n",
     "    \"Sampled \"\n",
     "    + str(c)\n",
