Snap POIs 1-to-n with geopandas 1.1.1
- Bugfixes to 01, 03
- Add testdump for snapping
- Continue developing 06 (not yet finished)

--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-07  \n",
-    "Last modified: 2025-08-08"
+    "Last modified: 2025-08-13"
    ]
   },
   {
@@ -229,6 +229,9 @@
    "outputs": [],
    "source": [
     "if debug:  # Just some code needed for the plots below\n",
+    "    Gnx = momepy.gdf_to_nx(\n",
+    "        edges, approach=\"primal\", integer_labels=True\n",
+    "    )  # Update Gnx to get the same node ids as G, for plotting\n",
     "    nodes, edges = momepy.nx_to_gdf(Gnx, points=True, lines=True)\n",
     "    nodes.set_crs(epsg=25832, inplace=True)\n",
     "    nodes_id = list(nodes.nodeID)\n",
