--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -290,6 +290,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c14c21c-bd70-42f5-9f52-f712c91b805a",
+   "metadata": {},
+   "source": [
+    "Can take hours:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5801d700",
