--- a/code/06_poi_experiments.ipynb
+++ b/code/06_poi_experiments.ipynb
@@ -35,7 +35,7 @@
     "4. Add POIs to nodes in H3 grid cells with highest node density (q0.15)\n",
     "5. Add POIs to nodes in H3 grid cells with lowest water densities (q0.5), and of those lowest loops (q0.5), and of those highest node density (q0.5).\n",
     "\n",
-    "All setups limited to the same number of cells (but different number of nodes).\n",
+    "All setups limited to the same number of cells (but different number of nodes). A POI added to a node will snap to all adjacent links.\n",
     "\n",
     "Performance metrics: \n",
     "1. Increase the percent of zero-loop nodes (improvement from 29%)\n",
@@ -127,7 +127,7 @@
     "    \"ndq15\": {},\n",
     "    \"wplbndq50\": {},\n",
     "}\n",
-    "addpoisnums = [100]  # Number of POIs to add in each experiment\n",
+    "addpoisnums = [1000]  # Number of POIs to add in each experiment\n",
     "runsperexperiment = 10  # Number of runs per experiment"
    ]
   },
@@ -163,16 +163,6 @@
    "metadata": {},
    "source": [
     "### Load data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "860bebe7-f3a4-49da-9353-6ae4a6650eca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pois = load_pois()"
    ]
   },
   {
@@ -221,6 +211,23 @@
     "edges.set_crs(epsg=25832, inplace=True)\n",
     "G = ig.Graph.from_networkx(Gnx)\n",
     "G.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22620a84-80e6-4508-b01d-086a7f869023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois_orig = load_pois()\n",
+    "\n",
+    "nodes_id = list(nodes.nodeID)\n",
+    "nodes_x = list(nodes.geometry.x)\n",
+    "nodes_y = list(nodes.geometry.y)\n",
+    "nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))\n",
+    "\n",
+    "# POIs are snapped and edge attributes are updated later in each experiment"
    ]
   },
   {
@@ -516,8 +523,9 @@
     "    ]\n",
     "    for poistoadd in addpoisnums:\n",
     "        experiment_results[experimentid][poistoadd] = {\n",
-    "            \"nodesamples\": []\n",
-    "        }  # This is a list of lists of the node indices that are sampled in each run\n",
+    "            \"nodesamples\": [],  # This is a list of lists of the node indices that are sampled in each run\n",
+    "            \"nodeloopnums\": [],  # This is a list of lists of the loop numbers found in each run\n",
+    "        }\n",
     "        for run in range(runsperexperiment):\n",
     "            experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
     "                list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
@@ -542,10 +550,200 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7dd3e3f2-f5bb-41f3-8a5a-abcdf16f009c",
+   "metadata": {},
+   "source": [
+    "Can take hours to days:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abaecb0a-e319-4a63-9382-d71483d750a0",
+   "metadata": {},
+   "source": [
+    "==== All code below not finished yet ===="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917ab80d-0674-4ec0-a221-7d8cb2914baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for experimentid in [\"wplbndq50\"]:  # experiment_results.keys():\n",
+    "    for poistoadd in addpoisnums:\n",
+    "        for run in [0]:  # range(runsperexperiment):\n",
+    "            # Step 1: Add additional POIs from node samples\n",
+    "            nodesample = experiment_results[experimentid][poistoadd][\"nodesamples\"][run]\n",
+    "            pois_new = gpd.GeoDataFrame(\n",
+    "                geometry=gpd.GeoSeries(nodes.loc[nodesample][\"geometry\"])\n",
+    "            )\n",
+    "            pois_new[\"category\"] = \"facility\"\n",
+    "            pois_merged = gpd.GeoDataFrame(\n",
+    "                pd.concat([pois_orig, pois_new], ignore_index=True)\n",
+    "            )\n",
+    "\n",
+    "            # Step 2: Snap POIs\n",
+    "            edges[\"has_water\"] = False\n",
+    "            edges[\"has_facility\"] = False\n",
+    "            edges[\"has_service\"] = False\n",
+    "            edges[\"has_attraction\"] = False\n",
+    "            edges[\"poi_diversity\"] = 0\n",
+    "            pois_snapped = snap_pois(pois_merged, edges)\n",
+    "            edges = update_poi_attributes(edges, pois_snapped)\n",
+    "            G = gdf_to_igraph(edges)\n",
+    "            Gnx = nx.empty_graph()\n",
+    "            Gnx = nx.disjoint_union(Gnx, G.to_networkx())\n",
+    "\n",
+    "            # Step 3: Generate loops\n",
+    "            (\n",
+    "                allloops,\n",
+    "                alllooplengths,\n",
+    "                allloopnumnodes,\n",
+    "                allloopmaxslopes,\n",
+    "            ) = get_allloops_nx(Gnx)\n",
+    "\n",
+    "            # Step 4: Restrict to water\n",
+    "            try:  # See if allloops_dict exists. If not, initialize. This allows running multiple scenarios.\n",
+    "                allloops_dict\n",
+    "            except NameError:\n",
+    "                allloops_dict = {}\n",
+    "            allloops_dict[SCENARIOID] = {}\n",
+    "\n",
+    "            allloops_dict[SCENARIOID][0] = restrict_scenario(\n",
+    "                allloops, allloops, level=0\n",
+    "            )\n",
+    "            allloops_dict[SCENARIOID][1] = restrict_scenario(\n",
+    "                allloops, allloops_dict[SCENARIOID][0], level=1\n",
+    "            )\n",
+    "            allloops_dict[SCENARIOID][2] = restrict_scenario(\n",
+    "                allloops, allloops_dict[SCENARIOID][1], level=2\n",
+    "            )\n",
+    "\n",
+    "            # Step 5: Save relevant results\n",
+    "            experiment_results[experimentid][poistoadd][\"nodeloopnums\"].append(\n",
+    "                get_vertex_loopnums(allloops_dict[SCENARIOID][2])\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0ba39d-f2e7-4ae0-8962-33e74e942976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if LOOP_LENGTH_BOUND:\n",
+    "    llb_string = \"_maxlength\" + str(LOOP_LENGTH_BOUND)\n",
+    "else:\n",
+    "    llb_string = \"\"\n",
+    "\n",
+    "with open(\n",
+    "    PATH[\"data_out\"] + \"experiments_\" + str(LOOP_NUMNODE_BOUND) + llb_string + \".pkl\",\n",
+    "    \"wb\",\n",
+    ") as f:\n",
+    "    pickle.dump(experiment_setups, f)\n",
+    "    pickle.dump(experiment_results, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ebc7da83-4125-4c3e-8a97-27b2113d110a",
    "metadata": {},
    "source": [
     "## Analyze experiment results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b983280-6f4b-4cde-9517-7635e2a1e312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loopnums = np.array(experiment_results[experimentid][poistoadd][\"nodeloopnums\"])\n",
+    "loopnums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a4a049e-4803-4ae2-acf5-d1c20cd577fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bit_threshold = 8\n",
+    "ymaxconst = 7800\n",
+    "\n",
+    "fig = plt.figure(\n",
+    "    figsize=(240 / PLOTPARAM[\"dpi\"], 240 / PLOTPARAM[\"dpi\"]),\n",
+    "    dpi=PLOTPARAM[\"dpi\"],\n",
+    ")\n",
+    "xmax = bit_threshold + 2\n",
+    "axes = fig.add_axes([0.1, 0.1, 0.8, 0.8])\n",
+    "\n",
+    "cmaparr = get_cmap(bit_threshold=bit_threshold)\n",
+    "cmaparr = np.vstack((PLOTPARAM[\"color\"][\"noloop\"], cmaparr))\n",
+    "\n",
+    "loopnums = np.array(\n",
+    "    experiment_results[experimentid][poistoadd][\"nodeloopnums\"]\n",
+    ").flatten()\n",
+    "\n",
+    "N, bins, patches = axes.hist(\n",
+    "    loopnums,\n",
+    "    bins=list(np.linspace(0, xmax, xmax + 1)),\n",
+    "    density=False,\n",
+    "    linewidth=0.5,\n",
+    ")\n",
+    "\n",
+    "patches[0].set_edgecolor(PLOTPARAM[\"color\"][\"neutral\"])\n",
+    "for i in range(xmax):\n",
+    "    patches[i].set_facecolor(cmaparr[i, :])\n",
+    "\n",
+    "n_upper_outliers = (loopnums > bit_threshold).sum()\n",
+    "patches[-1].set_height(patches[-1].get_height() + n_upper_outliers)\n",
+    "\n",
+    "axes.text(\n",
+    "    0.1,\n",
+    "    (max(N) + n_upper_outliers) * 1.1 if not ymaxconst else ymaxconst * 0.985,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(loopnums) if (x == 0)]) / len(loopnums) * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"left\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=PLOTPARAM[\"color\"][\"neutral\"],\n",
+    ")\n",
+    "axes.text(\n",
+    "    xmax - 0.1,\n",
+    "    (max(N) + n_upper_outliers) * 1.1 if not ymaxconst else ymaxconst * 0.985,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(loopnums) if (x >= bit_threshold)])\n",
+    "            / len(loopnums)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=cmaparr[-1, :],\n",
+    ")\n",
+    "\n",
+    "axes.set_xlabel(\"Bits $2^b$\")\n",
+    "axes.set_ylabel(\"Frequency\")\n",
+    "axes.set_title(\"Loops per node\")\n",
+    "axes.set_xticks([i + 0.5 for i in list(range(xmax))])\n",
+    "axes.set_xticklabels([\"No\"] + [(str(i)) for i in list(range(xmax - 2))] + [\"8+\"])\n",
+    "axes.set_xlim([0, xmax])\n",
+    "\n",
+    "if not ymaxconst:\n",
+    "    axes.set_ylim([0, 1.12 * (max(N) + n_upper_outliers)])\n",
+    "else:\n",
+    "    axes.set_ylim([0, ymaxconst])"
    ]
   }
  ],
